--- a/docker/alembic/Dockerfile
+++ b/docker/alembic/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONUNBUFFERED=1
 COPY requirements.txt /requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY src /src
-WORKDIR /src
+COPY alembic /alembic
+COPY alembic.ini /alembic.ini
 
-CMD [ "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000" ]
+CMD [ "alembic", "upgrade", "head" ]
