--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -31,8 +31,8 @@ services:
 
   postgresql:
     image: postgres:17.6
-    expose:
-      - 5432
+    ports:
+      - ${POSTGRES_PORT}:5432
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASS}
