--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,9 +11,12 @@ services:
       - DB_USER=${POSTGRES_USER}
       - DB_PASSWORD=${POSTGRES_PASS}
       - DB_NAME=${POSTGRES_NAME}
+      - SECRET_KEY=${SECRET_KEY}
     volumes:
       - ../src:/src
     command: bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    depends_on:
+      - postgresql
     restart: always
 
   alembic:
@@ -47,4 +50,6 @@ services:
       - ${NGINX_PORT}:80
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - fastapi
     restart: always
