--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -12,6 +12,10 @@ services:
       - DB_PASSWORD=${POSTGRES_PASS}
       - DB_NAME=${POSTGRES_NAME}
       - SECRET_KEY=${SECRET_KEY}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - TOKEN_WHITE_LIST_TABLE=${TOKEN_WHITE_LIST_TABLE}
     volumes:
       - ../src:/src
     command: bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
