--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,8 +3,8 @@ services:
     build:
       context: ..
       dockerfile: docker/fastapi/Dockerfile
-    expose:
-      - 8000
+    ports:
+      - ${FASTAPI_PORT}:8000
     environment:
       - DB_HOST=postgresql
       - DB_PORT=5432
@@ -48,12 +48,12 @@ services:
       - ./postgresql/data:/var/lib/postgresql/data
     restart: always
 
-  nginx:
-    image: nginx:1.29.2
-    ports:
-      - ${NGINX_PORT}:80
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - fastapi
-    restart: always
+  # nginx:
+  #   image: nginx:1.29.2
+  #   ports:
+  #     - ${NGINX_PORT}:80
+  #   volumes:
+  #     - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+  #   depends_on:
+  #     - fastapi
+  #   restart: always
